# Snail

./: .gitignore  CMakeLists.txt  a.out  demo_features.json  hello.c  lsCommand.c  myshell  session_change_log.json  snail  snail.conf
include/: cdCommand.h  clearCommand.h  commandHistory.h  config.h  dumpLIst.h  executor.h  exitCommand.h  externalCommand.h  fileDump.h  lsCommand.h  mkdirCommand.h  mvCommand.h  parser.h  pipelines.h  prompt.h  reloadConfig.h  repl.h  rmCommand.h  rmdirCommand.h  snailHelp.h  terminal.h  touchCommand.h  treeCommand.h
presentation/: EDITABLE_PRESENTATION_NOTES.md  generate_group16_presentation.py
src/: CdCommand.c  LsCommand.c  cdCommand.c  clearCommand.c  commandHistory.c  config.c  dumpList.c  executor.c  exitCommand.c  externalCommand.c  fileDump.c  lsCommand.c  main.c  mkdirCommand.c  mvCommand.c  parser.c  prompt.c  reloadConfig.c  repl.c  rmCommand.c  rmdirCommand.c  snailHelp.c  test  touchCommand.c  treeCommand.c
tests/: run_session_regression_tests.py
ui_snail/: intro.py
